<resources>
    <string name="app_name">CoWin Vaccine Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="submit">Submit</string>
    <string name="fetching_beneficiary_details">Getting Beneficiaries…</string>
    <string name="generating_otp">Generating OTP</string>
    <string name="otp_generated">OTP Generated. Waiting to Receive OTP…</string>
    <string name="otp_received">OTP Received: %s…</string>
    <string name="validating_otp">Validating OTP</string>
    <string name="otp_validated">OTP Validated Successfully</string>
    <string name="otp_timer">Waiting to Receive OTP, Remaining Time: %s</string>
    <string name="retry">Retry</string>
    <string name="text_bref_id">Beneficiary ReferenceId:</string>
    <string name="name">Name:</string>
    <string name="vaccine_status">Vaccine Status:</string>
    <string name="vaccine">Vaccine:</string>
    <string name="check_persons">Check the persons for whom vaccine needs to be Booked:</string>
    <string name="no_preference">No Preference</string>
    <string name="covaxin">COVAXIN</string>
    <string name="covishield">COVISHIELD</string>
    <string name="choose_vaccine">Choose your preferred Vaccine:</string>
    <string name="select_state">Select State:</string>
    <string name="select_district">Select District</string>
    <string name="free_vaccine">Do you want to get free vaccines?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh_interval">Refresh Interval(Min: 3Secs, Max:15Secs):</string>
    <string name="start_looking_from">Start Looking From:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="start_booking">Start Looking For Vaccines</string>
    <string name="stop_booking">Stop Looking For Vaccines</string>
    <string name="looking_for">Looking For</string>
    <string name="eighteen_plus">18–45</string>
    <string name="fourty_five_plus">45+</string>
    <string name="select_at_least_one">Please select at least one beneficiary</string>
    <string name="age_issue">Selected Beneficiary do not fall under age group</string>
    <string name="already_vaccinated">Selected beneficiary is already vaccinated</string>
    <string name="inavalid_state_or_district">Invalid State or District Selected</string>
    <string name="invalid_refresh_interval">Invalid Refresh Interval</string>
    <string name="check_by">Check By:</string>
    <string name="pin">PIN</string>
    <string name="state_and_district">State And District</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="booking_at">Scheduling Appointment At:</string>
    <string name="center_id">Center Id:</string>
    <string name="address">Address:</string>
    <string name="enter_captcha">Enter Captcha</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="invalid_captcha">Invalid Captcha !!!</string>
    <string name="no_beneficiary">You do not have added beneficiaries. Please go to https://www.cowin.gov.in to add beneficiaries.</string>
    <string name="booking_success">Successfully Booked appointment. Appointment Id: %s</string>
    <string name="getting_inavlid_captcha">Getting Invalid Captcha</string>
    <string name="trying_to_schedule">Trying to Schedule Appointment</string>
    <string name="fetching_captcha">Fetching Captcha</string>
    <string name="proceed">Proceed</string>
    <string name="warning">
        &#8226; Use at your own risk
        \n\n&#8226; This is a hobby project, so the developer is not responsible for any concerned legalities
        \n\n&#8226; Make sure to provide Read SMS Permission
        \n\n&#8226; Make sure to provide draw over apps permission.
        \n\n&#8226; For some devices like MI, Oppo, Vivo provide Go to App -> Permission -> Provide All Permissions
        \n\n&#8226; Try Booking from Mobile Data to avoid 301
        \n\n&#8226; If something does not work Go to App Settings click on Stop and then click on clear data as the app is not fully stable yet
        \n\n&#8226; Make sure your alarm sound is on high volume so that u get alert to enter captcha for Booking Appointment
    </string>
    <string name="age_group">Age Group:</string>
    <string name="total_available_centers">Total available centers: %s</string>
    <string name="next_center">Next Center</string>
    <string name="session">Session:</string>
    <string name="date">Date:</string>
    <string name="available_capacity">Available Capacity:</string>
    <string name="previous_session">Previous Session</string>
    <string name="previous_center">Previous Center</string>
    <string name="next_session">Next Session</string>
</resources>