<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="dev.romio.cowinvaccinebook.data.model.BeneficiarySummary" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:cardCornerRadius="@dimen/card_default_radius"
        app:contentPadding="@dimen/padding_small">
        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_beneficiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewmodel.appointmentCount > 0 ? View.INVISIBLE : View.VISIBLE}"
                android:checked="@{viewmodel.isChecked()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_bref_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bref_id"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/cb_beneficiary"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_bref_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.brId}"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintStart_toEndOf="@id/tv_bref_id"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_x_small"
                app:layout_constraintStart_toEndOf="@id/cb_beneficiary"
                app:layout_constraintTop_toBottomOf="@id/tv_bref_id_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.name}"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vaccine_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_status"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_x_small"
                app:layout_constraintStart_toEndOf="@id/cb_beneficiary"
                app:layout_constraintTop_toBottomOf="@id/tv_name_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vaccine_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.vaccinationStatus}"
                app:layout_constraintStart_toEndOf="@id/tv_vaccine_status"
                app:layout_constraintTop_toTopOf="@id/tv_vaccine_status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vaccine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_x_small"
                app:layout_constraintStart_toEndOf="@id/cb_beneficiary"
                app:layout_constraintTop_toBottomOf="@id/tv_vaccine_status_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vaccine_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.vaccine}"
                app:layout_constraintStart_toEndOf="@id/tv_vaccine"
                app:layout_constraintTop_toTopOf="@id/tv_vaccine" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
